Bug 178154 - column view not saved
Summary: column view not saved
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.10.92
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 178459 179861 185412 186460 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-19 09:47 UTC by Dario Panico
Modified: 2011-12-05 21:02 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (247.30 KB, image/png)
2008-12-19 18:56 UTC, Dario Panico
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dario Panico 2008-12-19 09:47:08 UTC
Version:           1.10.92 (using 4.1.85 (KDE 4.1.85 (KDE 4.2 Beta2)), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-10-generic

column width in the header panel is not saved on session quit. quite annoying because when every column is displayed and with very strange widths (session start behaviour) it's quite unusable.
Comment 1 Jaime Torres 2008-12-19 12:33:08 UTC
If you are refering to the Columns in the message preview pane, It works for me in 4.1.85 svn trunk r897757.

If you are refering to the Message Structure Viewer, then I'm 100% it is a dup (but I can not find the bug).

Comment 2 Dario Panico 2008-12-19 18:56:23 UTC
Created attachment 29453 [details]
screenshot

I'm referring to the red marked panel.

A very similar bug is on akregator (unsolved up to now), maybe the issue is the same.
Comment 3 Szymon Stefanek 2008-12-21 04:15:12 UTC
Can't reproduce it with current kontact.
Can you write down the exact steps to reproduce it ?

However... this *seems* to be related to a regression in Qt4: a bug report has been sent to qt-bugs and it has been acknowledged by the Trolltech team. Also workaround for the problem has been committed recently (a week ago if I'm not wrong) but it might not be an universal solution...




Comment 4 Dario Panico 2009-01-01 15:42:38 UTC
steps to reproduce:
- open kontact;
- open kmail;
- set your favourite view (e.g. right click on column title, "Show default columns");
- see that everything is exactly as you want it to be;
- File -> Exit to close kontact;
- Reopen Kontact;
- reopen kmail;
- see that everything is a mess.
Comment 5 Garry Williams 2009-01-01 16:54:04 UTC
(In reply to comment #3)
> this *seems* to be related to a regression in Qt4: a bug report has
> been sent to qt-bugs and it has been acknowledged by the Trolltech team.

I was able to reproduce this bug until I installed qt-4.4.3-8.fc10, which was recently made available in the fedora kde-testing repository.  After installing this update, I can no longer reproduce this bug.
Comment 6 Mark Ziegler 2009-01-14 12:28:47 UTC
I can confirm this. Here I have exactly the same behaviour.

openSUSE 11.0
Qt: 4.4.3
KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101)) "release 78.2"
KMail: 1.10.92
Comment 7 Dirk Fröhlich 2009-01-16 17:26:49 UTC
I can confirm this bug for 4.1.87, but only for KMail within Kontact. KMail started separately hasn't got this problem.
Comment 8 Thomas Zell 2009-02-07 21:15:07 UTC
I am still seeing this for KDE 4.2.0 and Qt 4.4.3 on OpenSUSE 11.1
Comment 9 Frank Reininghaus 2009-02-15 16:04:14 UTC
*** Bug 178459 has been marked as a duplicate of this bug. ***
Comment 10 Frank Reininghaus 2009-02-15 16:05:11 UTC
*** Bug 179861 has been marked as a duplicate of this bug. ***
Comment 11 Cyrill Helg 2009-02-15 18:10:09 UTC
It still exists here on a recent kde4.2 branch version using qt 4.5_rc1... so this is not a qt issue as far as I understand.
Comment 12 Dario Panico 2009-02-25 13:38:14 UTC
i still can reproduce it with a recent trunk build (using qt4.5)
Comment 13 Blackpaw 2009-02-28 05:13:31 UTC
Its fixed in the Neon KDE-Nightly builds (KDE 4.2.63) which use QT 4.4.3 so I'd say definitely not a QT issue.

kde4-config --version
Qt: 4.4.3
KDE: 4.2.63 (KDE 4.2.63 (KDE 4.3 >= 20090212))
kde4-config: 1.0
Comment 14 Szymon Stefanek 2009-03-06 05:08:10 UTC
SVN commit 935749 by stefanek:

Qt behaviour changed again with respect to show/resize events
inside kontact and it revealed another point of failure inside
the column saving machinery. Once again reproduced and hopefully
fixed. Please let me know if you still hit the problem.

BUG: 178154 



 M  +17 -1     view.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=935749
Comment 15 Jaime Torres 2009-03-08 10:39:15 UTC
*** Bug 186460 has been marked as a duplicate of this bug. ***
Comment 16 Thomas McGuire 2009-03-11 15:13:53 UTC
SVN commit 938198 by tmcguire:

Backport r935749 by stefanek from trunk to the 4.2 branch:

Qt behaviour changed again with respect to show/resize events
inside kontact and it revealed another point of failure inside
the column saving machinery. Once again reproduced and hopefully
fixed. Please let me know if you still hit the problem.

CCBUG: 178154 




 M  +17 -1     view.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=938198
Comment 17 Dave Brain 2009-12-26 22:38:25 UTC
This is still a problem on kde 4.3.4 and kmail 1.12.4. The column view is not saved.
Comment 18 Björn Ruberg 2010-02-06 22:15:49 UTC
*** Bug 185412 has been marked as a duplicate of this bug. ***
Comment 19 Tom Schumm 2011-12-05 21:02:56 UTC
This bug still exists. Is there any hope for a fix?

kontact --version
Qt: 4.7.2
KDE Development Platform: 4.6.5 (4.6.5)
Kontact: 4.4.10

kmail --version
Qt: 4.7.2
KDE Development Platform: 4.6.5 (4.6.5)
KMail: 1.13.6