Qt behaviour changed again with respect to show/resize events inside kontact and it revealed another point of failure inside the column saving machinery. Once again reproduced and hopefully fixed. Please let me know if you still hit the problem.

BUG: 178154 


svn path=/trunk/KDE/kdepim/; revision=935749